--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "agora-app-builder-cli": "^2.0.4",
     "agora-rtc-sdk-ng": "^4.14.2",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
@@ -18,7 +19,6 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-
     "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
