--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "agora-access-token": "^2.0.4",
     "agora-app-builder-cli": "^2.0.4",
     "agora-rtc-sdk-ng": "^4.14.2",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.6",
     "vite": "^3.2.2",
     "web-vitals": "^2.1.4"
   },
